# PostTagSystem

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile-AWSBatch  File-Formats.md  LICENSE  PacletInfo.m  README.md  build.wls  install.wls  libPostTagSystemTest.sh  lint.sh  pack.wls  performanceTest.wls  test.wls
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: weed_report.md
CLI/: CMakeLists.txt  arguments.cpp  arguments.hpp  main.cpp
CLI/files/: PostTagCribFile.cpp  PostTagCribFile.hpp  PostTagFile.hpp  PostTagFileReader.cpp  PostTagFileReader.hpp  PostTagFileWriter.cpp  PostTagFileWriter.hpp  PostTagInitFile.cpp  PostTagInitFile.hpp  PostTagResultFile.cpp  PostTagResultFile.hpp
DevUtils/: BuildLibPostTagSystem.m  Console.m  FileTreeHashes.m  GitLink.m  PackPostTagSystem.m  Rasterization.m  init.m
FileFormats/: CribFile.wl  InitFile.wl  PostTagFileFormats.wl  README.md  ResultFile.wl  Utility.wl
FileFormats/SampleFiles/: crib1.postcrib  init1.postinit  result1.postresult  result2.postresult
Kernel/: A0$messages.m  GeneratePostTagSystemHistory.m  GenerateTagSystemHistory.m  PostTagSystem.m  PostTagSystemEvolution.m  PostTagSystemFinalState.m  buildData.m  cpp.m  globals.m  init.m  packing.m  testUtilities.m
PostTagSystem.xcodeproj/: project.pbxproj
PostTagSystem.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
PostTagSystem.xcodeproj/xcshareddata/xcschemes/: PostTagSystem.xcscheme  PostTagSystemTests-Release.xcscheme  PostTagSystemTests.xcscheme
TestDatafiles/: crib1.crib  crib1.postcrib  init1.postinit  output1.postresult
Tests/: GeneratePostTagSystemHistory.wlt  GenerateTagSystemHistory.wlt  PostTagSystem.wlt  PostTagSystemEvolution.wlt  PostTagSystemFinalState.wlt  buildData.wlt  meta.wlt  packing.wlt
cmake/: StatefulTagSystemConfig.cmake.in
libPostTagSystem/: CheckpointsTrie.cpp  CheckpointsTrie.hpp  ChunkedState.hpp  NDTM.cpp  NDTM.hpp  PostTagHistory.cpp  PostTagHistory.hpp  PostTagMultihistory.cpp  PostTagMultihistory.hpp  PostTagSearcher.cpp  PostTagSearcher.hpp  PostTagState.h  TagState.cpp  TagState.hpp  TagSystemEvaluator.cpp  TagSystemEvaluator.hpp  WolframLanguageAPI.cpp  WolframLanguageAPI.hpp
libPostTagSystem/test/: CMakeLists.txt  CheckpointsTrie_test.cpp  PostTagSearcher_test.cpp  PostTagSystem_test.cpp
scripts/: CLIRunner-AWSBatch.sh  CLIRunner-CharityEngine.sh  buildLibraryResources.sh  version.wl
scripts/git_hooks/: pre-commit
